--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#" style="font-family: Algerian; font-weight: 100;
+        <a class="navbar-brand" href="#" style="font-family: Algerian, Arial ; font-weight: 100;
             font-size: 23px;">ABHIJIT</a>
         <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon " ></span>
