--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
             <ul>
                 <li>Secondary Education:- <p class="text-white">Corona Batch. Hope no farther details needed.</p></li>
                 <li>Higher Secondary Education:- <p class="text-white">Done my H.S. from Gokulpur BidhanChandra Vidya Bhaban(H.S.) </p></li>
-                <li>Graduation:- <p class="text-white">Persuing B.sc. in Computer Science from Midnapore College (Autonomos).</p></li>
+                <li>Graduation:- <p class="text-white">Pursuing B.sc. in Computer Science from Midnapore College (Autonomos).</p></li>
             </ul>
         </div>
     </section>
