--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             <p class="text-white">Hello friends, <br>Myself <span style="color:cyan; font-size: 25px; font-family: 'Times New Roman', Times, serif;">Abhijit</span> & I'm a student of B.sc. Computer science in Midnapore Colllege (Autonomous). Currently I'm working in frontend projects.</p>
             <h4 style="color: rgb(255, 81, 0); text-decoration: underline;">My Education :- </h4><br>
             <ul>
-                <li>Secondary Education:- <p class="text-white">Corona Batch. Hope no farther details needed.</p></li>
+                <li>Secondary Education:- <p class="text-white">Corona Batch. Hope no further details needed.</p></li>
                 <li>Higher Secondary Education:- <p class="text-white">Done my H.S. from Gokulpur BidhanChandra Vidya Bhaban(H.S.) </p></li>
                 <li>Graduation:- <p class="text-white">Pursuing B.sc. in Computer Science from Midnapore College (Autonomos).</p></li>
             </ul>
