--- a/index.html
+++ b/index.html
@@ -373,13 +373,17 @@
             transition: .6s ease;
             scale: 1.09;
         }
+        .logo{
+            height:85px;
+            width:85px;
+        }
     </style>
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#" style="font-family: Algerian, Arial ; font-weight: 100;
-            font-size: 23px;">ABHIJIT</a>
+            font-size: 23px;"><img src="Mylogo.png" alt="ABHIJIT" class="logo"></a>
         <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon " ></span>
         </button>
