--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             
         }
         .navbar-brand, .nav-link {
-            color: #e0e0e0 !important;
-            padding: 20px;
+            color: #e0e0e0 ;
+            padding: 0px;
             margin-right: 32px;
             animation: slideLeft 2s ease forwards;
            
